--- a/ansible/machines/grafana-server/roles/configure-grafana/templates/grafana.ini.j2
+++ b/ansible/machines/grafana-server/roles/configure-grafana/templates/grafana.ini.j2
@@ -1689,7 +1689,7 @@ timeout = 30s
 ;enable_alpha = false
 ;app_tls_skip_verify_insecure = false
 # Enter a comma-separated list of plugin identifiers to identify plugins to load even if they are unsigned. Plugins with modified signatures are never loaded.
-allow_loading_unsigned_plugins = victoriametrics-datasource,victorialogs-datasource
+allow_loading_unsigned_plugins = victoriametrics-datasource,victoriametrics-logs-datasource
 # Enable or disable installing / uninstalling / updating plugins directly from within Grafana.
 ;plugin_admin_enabled = false
 ;plugin_admin_external_manage_enabled = false
